# DeepProjection

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
deepprojection/: CARE_projection.py  GUI.py  ProjNet.py  __init__.py  __main__.py  data.py  postprocess.py  predict.py  project.py  train.py  utils.py
package/: CARE_projection.py  GUI.py  ProjNet.py  __init__.py  data.py  predict.py  train.py  utils.py
